[gd_scene load_steps=2 format=3 uid="uid://ckg8fdqu8urmu"]

[ext_resource type="Script" path="res://Menu/PauseMenu/PauseMenuScript.gd" id="1_4y8rp"]

[node name="Pause Menu" type="Control"]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -110.0
offset_right = 105.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.99688)
pivot_offset = Vector2(49, 49)
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_4y8rp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2.2, 2.2)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Main Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu
"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
